# qLDPC

./: .gitignore  .readthedocs.yaml  README.md  build-cython.py  build.py  pyproject.toml  setup.py  test.py  test.pyx
.github/: CODEOWNERS
.github/workflows/: build-changes.yaml  ci.yml  continuous-integration.yaml  continuous_integration.yaml  releases.yaml
check/: all_.py  configs.py  flake8_.py  format_.py  pylint_.py
checks/: all_.py  build_docs.py  coverage_.py  format_.py  lint_.py  mypy_.py  pylint_.py  pytest_.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  qldpc.codes.rst  qldpc.external.rst  qldpc.rst
examples/: CustomDecoder.ipynb  Stim_QEC.ipynb  basics.ipynb  bivariate_bicycle_codes.ipynb  circuit_simulations.ipynb  cudaq.ipynb  cudaq_integration.ipynb  custom_decoder.py  find_bbcode_layouts.py  find_optimal_communication_distance.py  logical_error_rates.ipynb  logical_errors.ipynb  lresc.ipynb  noise_model.ipynb  noise_models.ipynb  qLDPC_CUDAQ_Code_Capacity_Model.ipynb  qldpc_demo.py  transversal_gates.ipynb
examples/scripts/: utils.py
experiments/: quantum_tanner_search.py  quasi_cyclic_search.py  save_quasi_cyclic.py  verify_tanner_codes.py
experiments/bivariate_bicycle/: collect_results.py  run_search.py
experiments/quantum_tanner/: collect_results.py  run.py  run_randomized_search.py  verify_codes.py
experiments/quasi_cyclic/: collect_results.py  make_summary_files.py  run_search.py
qldpc/: .abstract.py.swo  SCRATCH WORK QLDPC.ipynb  __init__.py  abstract.py  abstract_test.py  cache.py  cache_test.py  circuits.py  circuits_test.py  codes.py  codes_test.py  decoder.py  decoder_test.py  decoders.py  decoders_test.py  distance.py  groups.py  indexed_groups.py  indexed_groups_test.py  math.py  math_test.py  named_codes.py  named_codes_test.py  named_groups.py  named_groups_test.py  objects.py  objects_test.py  qldpc_circuit_simulation.ipynb  random_methods.py  simulator.py  small_codes.py  small_codes_test.py  small_groups.py  small_groups_test.py
qldpc/codes/: __init__.py  _distance.pyx  classical.py  classical_test.py  codes_test.py  common.py  common_test.py  distance.py  distance_test.py  quantum.py  quantum_test.py
qldpc/stim/: circuit.py  noise_model.py  sinter_decoders.py  syndrome_measurement.py  util.py
testing/: numba_distance.py  test_dist.py
